Create a unordered list for Top-Navbar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     <div class="header">
+        <div class="top-nav">
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">OUR WORK</a></li>
+                <li><a href="#">WHAT WE DO</a></li>
+                <li><a href="#"> ABOUT US</a></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
