--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#">WHAT WE DO</a></li>
                 <li><a href="#"> ABOUT US</a></li>
             </ul>
+            <button>Contact us</button>
         </div>
     </div>
 </body>
