Logo + Name wurde für die Sidebar hinzugefügt

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             </ul>
             <button>Contact us</button>
         </div>
+
+    <div class="side-bar">
+        <img src="/testpro/test1/Test2/img/logo.png" class="logo">
+        <a href="#">LETEST PROJECT</a>
+    </div>
     </div>
 </body>
 </html>
