--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
         </div>
 
     <div class="side-bar">
-        <img src="/testpro/test1/Test2/img/logo.png" class="logo">
+        <img src="/testpro/test1/Test2/img/logo.png" alt="logo" class="logo">
         <a href="#">LETEST PROJECT</a>
+    </div>
+    <div class="content">
+        <p>WE HELP YOU TO</p>
+        <h1>Design Your <br> Journey</h1>
+        <div class="icon">
+            <img src="./img/arrow.png" alt="icon" class="arrow"> 
+        </div>
     </div>
     </div>
 </body>
